# Copyright (c) 2011 FFLAS-FFPACK
# written by Brice Boyer (briceboyer) <boyer.brice@gmail.com>
# adapted from LinBox configuration
#
# ========LICENCE========
# This file is part of the library FFLAS-FFPACK.
#
# FFLAS-FFPACK is free software: you can redistribute it and/or modify
# it under the terms of the  GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, see <https://www.gnu.org/licenses/>.
# ========LICENCE========
#/


SUBDIRS=fflas ffpack field utils paladin interfaces checkers

EXTRA_DIST=fflas-ffpack.doxy

pkginclude_HEADERS = config-blas.h   \
		     fflas-ffpack.h  \
		     config.h \
		     fflas-ffpack-config.h \
		     fflas-ffpack-thresholds.h \
		     fflas-ffpack-default-thresholds.h
