# Copyright(c)2011 by FFLAS-FFPACK
# This file is part of FFLAS-FFPACK
# This is free Software.
# Written by BB <bboyer@imag.fr>
# see the COPYING file for more details.

EXTRA_DIST=            \
	aclocal-include.m4 \
	blas-check.m4      \
	blasATLAS-check.m4 \
	blasGOTO-check.m4  \
	blasGSL-check.m4   \
	config-header.m4   \
	debug.m4           \
	fflas-ffpack-doc.m4    \
	fflas-ffpack-misc.m4   \
	fflas-ffpack-opt.m4    \
	givaro-check.m4    \
	gmp-check.m4       \
	lapack-check.m4

