# Copyright (c) 2011 FFLAS-FFPACK
# written by Brice Boyer (briceboyer) <boyer.brice@gmail.com>
# adapted from LinBox configuration
#
# ========LICENCE========
# This file is part of the library FFLAS-FFPACK.
#
# FFLAS-FFPACK is free software: you can redistribute it and/or modify
# it under the terms of the  GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
# ========LICENCE========
#/

SUBDIRS=CodeChunk

EXTRA_DIST=            \
	aclocal-include.m4 \
	fflas-ffpack-blas.m4 \
	config-header.m4   \
	debug.m4           \
	fflas-ffpack-doc.m4    \
	fflas-ffpack-misc.m4   \
	fflas-ffpack-opt.m4    \
	fflas-ffpack-precompile.m4\
	givaro-check.m4    \
	mkl-check.m4 \
	avx-check.m4 \
	omp-check.m4 \
	cuda-check.m4

